--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
     "prepare": "husky",
-    "generate:tags": "node scripts/generate-tag-data.mjs"
+    "generate:tags": "node scripts/generate-tag-data.mjs",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@headlessui/react": "2.2.0",
@@ -27,6 +28,7 @@
     "image-size": "2.0.1",
     "next": "15.2.4",
     "next-contentlayer2": "0.5.5",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "pliny": "0.4.1",
     "postcss": "^8.4.24",
